Replaces deprecated Constructors like Byte() or Integer()  with Byte.valueOf() or autoboxing