@@ -54,8 +54,8 @@ public class FlacFilter implements ContentDataFilter {
 					boolean firstHalfOfSyncHeaderFound = false;
 					ArrayList<Byte> buffer = new ArrayList<Byte>();
 					int data = 0;
-					buffer.add(new Byte((byte) ((frameHeader & 0xFF00) >>> 8)));
-					buffer.add(new Byte((byte) ((frameHeader & 0x00FF))));
+					buffer.add(Byte.valueOf((byte) ((frameHeader & 0xFF00) >>> 8)));
+					buffer.add(Byte.valueOf((byte) (frameHeader & 0x00FF)));
 					boolean running = true;
 					while(running) {
 						try {
@@ -88,10 +88,10 @@ public class FlacFilter implements ContentDataFilter {
 								packet = new FlacFrame(payload);
 							} else {
 								firstHalfOfSyncHeaderFound = false;
-								buffer.add(new Byte((byte)0xFF));
+								buffer.add(Byte.valueOf((byte) 0xFF));
 							}
 						}
-						buffer.add(new Byte((byte) (data&0xFF)));
+						buffer.add(Byte.valueOf((byte) (data & 0xFF)));
 					}
 				}
 				if(currentState == State.UNINITIALIZED && packet instanceof FlacMetadataBlock && ((FlacMetadataBlock) packet).isLastMetadataBlock()) {
